--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -193,19 +193,25 @@
             </div>
             <div class="tab-pane fade" id="account-settings-tab" role="tabpanel" aria-labelledby="application" style="min-height: 510px;">
               <h3 class="mb-4">Account Settings</h3>
-              <form #settingsForm="ngForm">
+              <form #accountSettingsForm="ngForm" (ngSubmit)="updateAccountSettings(accountSettingsForm)">
                 <input type="hidden" name="userId">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
                       <div class="form-check">
-                        <input type="checkbox" name="enabled" class="form-check-input">
+                        <input [disabled]="!(state?.appData?.data?.user?.roleName === 'ROLE_SYSADMIN' || state?.appData?.data?.user?.roleName === 'ROLE_ADMIN') || (isLoading$ | async)"
+                               [checked]="state?.appData?.data?.user?.enabled"
+                               [ngModel]="state?.appData?.data?.user?.enabled"
+                               type="checkbox" name="enabled" class="form-check-input">
                         <label class="form-check-label">
                           Account Active
                         </label>
                       </div>
                       <div class="form-check">
-                        <input type="checkbox" name="notLocked" class="form-check-input">
+                        <input [disabled]="!(state?.appData?.data?.user?.roleName === 'ROLE_SYSADMIN' || state?.appData?.data?.user?.roleName === 'ROLE_ADMIN') || (isLoading$ | async)"
+                               [checked]="state?.appData?.data?.user?.notLocked"
+                               [ngModel]="state?.appData?.data?.user?.notLocked"
+                               type="checkbox" name="notLocked" class="form-check-input">
                         <label class="form-check-label">
                           Account Unlocked
                         </label>
@@ -214,11 +220,11 @@
                   </div>
                 </div>
                 <div>
-                  <button type="submit" class="btn btn-primary">
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
-                    <span>Loading...</span>
-                    <span>Update</span>
-                  </button>
+                  <button [disabled]="!(state?.appData?.data?.user?.roleName === 'ROLE_SYSADMIN' || state?.appData?.data?.user?.roleName === 'ROLE_ADMIN') || (isLoading$ | async)" type="submit" class="btn btn-primary">
+                  <span *ngIf="isLoading$ | async" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                  <span *ngIf="isLoading$ | async">Loading...</span>
+                  <span *ngIf="!(isLoading$ | async)">Update</span>
+                </button>
                 </div>
               </form>
             </div>
