--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -23,6 +23,10 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Challenges
           </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" [routerLink]="['/challenges/all']"><i class="bi bi-person-plus-fill"></i> All Challenges</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/challenges/']"><i class="bi bi-people-fill"></i> My Challenges</a></li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -31,10 +35,10 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://robohash.org/recyclingcenter" width="20" height="20" class="user-avatar-md rounded-circle">
+            <img [src]="user?.imageUrl" [alt]="user?.firstName" class="user-avatar-md rounded-circle" style="width: 28px; height: 28px;">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" [routerLink]="['/profile']"><i class="bi bi-person-circle"></i> User Name</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/profile']"><i class="bi bi-person-circle"></i>{{ user?.firstName }} {{ user?.lastName }}</a></li>
             <li style="cursor: pointer;"><a class="dropdown-item"><i class="bi bi-box-arrow-in-right"></i> Logout</a></li>
           </ul>
         </li>
