--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -3,6 +3,7 @@
   <!-- Main Content -->
   <section class="main-section">
     <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
+    <app-stats></app-stats>
     <div class="container mt-3">
       <div class="row">
         <div class="col">
@@ -42,10 +43,9 @@
                 Open Always
               </ng-container>
               <ng-template #hourInterval>
-                {{ center.openingHour }} - {{ center.closingHour }}
+                {{ center.openingHour | slice: 0:5 }} - {{ center.closingHour | slice: 0:5 }}
               </ng-template>
             </td>
-
             <td>
               <span class="badge bg-success">OPEN</span>
             </td>
