--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -31,50 +31,58 @@
           </tr>
           </thead>
           <!-- Table Body -->
-          <tbody *ngFor="let center of state?.appData?.data?.page?.content"  class="table-body">
-          <tr class="cell-1">
-            <td><img src="https://robohash.org/recyclingcenter" width="42" height="42" class="rounded-circle"></td>
-            <td> {{ center.name }} </td>
-            <td> {{ center.county }} </td>
-            <td> {{ center.city }} </td>
-            <td> PAPER </td>
-            <td>
-              <ng-container *ngIf="center.alwaysOpen; else hourInterval">
-                Open Always
-              </ng-container>
-              <ng-template #hourInterval>
-                {{ center.openingHour | slice: 0:5 }} - {{ center.closingHour | slice: 0:5 }}
-              </ng-template>
-            </td>
-            <td>
-              <span class="badge bg-success">OPEN</span>
-            </td>
-            <td>
-              <button type="button" [routerLink]="['/centers']" class="btn btn-info">View</button>
-            </td>
-          </tr>
-          </tbody>
+          <ng-container *ngIf="state?.appData?.data?.page?.content?.length; else noCenters">
+            <tbody *ngFor="let center of state?.appData?.data?.page?.content"  class="table-body">
+            <tr class="cell-1">
+              <td><img src="https://robohash.org/recyclingcenter" width="42" height="42" class="rounded-circle"></td>
+              <td> {{ center.name }} </td>
+              <td> {{ center.county }} </td>
+              <td> {{ center.city }} </td>
+              <td> PAPER </td>
+              <td>
+                <ng-container *ngIf="center.alwaysOpen; else hourInterval">
+                  Open Always
+                </ng-container>
+                <ng-template #hourInterval>
+                  {{ center.openingHour | slice: 0:5 }} - {{ center.closingHour | slice: 0:5 }}
+                </ng-template>
+              </td>
+              <td>
+                <span class="badge bg-success">OPEN</span>
+              </td>
+              <td>
+                <button type="button" [routerLink]="['/centers']" class="btn btn-info">View</button>
+              </td>
+            </tr>
+            </tbody>
+          </ng-container>
         </table>
       </div>
 
       <!-- Pagination -->
-      <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-end">
-          <li class="page-item pointer">
-            <a class="page-link" aria-label="Previous">
-              <span aria-hidden="true">&laquo; Prev</span>
-            </a>
-          </li>
-          <li class="page-item pointer">
-            <a class="page-link">1</a>
-          </li>
-          <li class="page-item pointer">
-            <a class="page-link" aria-label="Next">
-              <span aria-hidden="true">Next &raquo;</span>
-            </a>
-          </li>
-        </ul>
+      <nav *ngIf="state?.appData?.data?.page.totalPages > 0">
+        <ngb-pagination
+          [page]="currentPage$ | async"
+          [collectionSize]="state?.appData?.data?.page.totalElements - 10"
+          [maxSize]="3"
+          [rotate]="true"
+          [boundaryLinks]="false"
+          [ellipses]="true"
+          (pageChange)="goToPage($event)"
+          class="pagination justify-content-end"
+        >
+
+          <ng-template ngbPaginationPrevious><< Prev</ng-template>
+          <ng-template ngbPaginationNext>Next >></ng-template>
+        </ngb-pagination>
       </nav>
+
+      <ng-template #noCenters>
+        <div class="alert alert-info mt-3" role="alert">
+          No recycling centers available at the moment. Check back later.
+        </div>
+      </ng-template>
+
     </div>
   </section>
 </ng-container>
