--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -2,3 +2,34 @@
   pointer-events: none;
   opacity: 0.6;
 }
+
+/* Add these styles to your component's CSS file */
+body {
+  margin-top: 20px;
+  background: #eee;
+}
+
+.card {
+  box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
+}
+
+.avatar.sm {
+  width: 2.25rem;
+  height: 2.25rem;
+  font-size: 0.818125rem;
+}
+
+.table-nowrap .table td,
+.table-nowrap .table th {
+  white-space: nowrap;
+}
+
+.table > :not(caption) > * {
+  padding: 0.75rem 1.25rem;
+  border-bottom-width: 1px;
+}
+
+/*table th {*/
+/*  font-weight: 600;*/
+/*  background-color: #eeecfd !important;*/
+/*}*/
