--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -3,7 +3,6 @@
   opacity: 0.6;
 }
 
-/* Add these styles to your component's CSS file */
 body {
   margin-top: 20px;
   background: #eee;
@@ -29,7 +28,65 @@ body {
   border-bottom-width: 1px;
 }
 
+
+.highlight {
+  background-color: yellow;
+  font-weight: bold;
+}
+/* Add these styles to your component's CSS file */
+
+.badge-soft-ewaste {
+  color: #fff !important;
+  background-color: #f3ad1a;
+  font-size: 12px;
+}
+
+.badge-soft-aluminium {
+  color: #fff !important;
+  background-color: #948b8b;
+  font-size: 12px;
+}
+
+.badge-soft-plastic {
+  color: #fff !important;
+  background-color: #f56e6e;
+  font-size: 12px;
+}
+
+.badge-soft-paper {
+  color: #fff !important;
+  background-color: #63ad6f;
+  font-size: 12px;
+}
+
+.badge-soft-glass {
+  color: #fff !important;
+  background-color: #3b76e1;
+  font-size: 12px;
+}
+
+.badge-soft-metals {
+  color: #fff !important;
+  background-color: rgba(183, 61, 61, 0.89);
+  font-size: 12px;
+}
+
+.badge-soft-plastic {
+  color: #fff !important;
+  background-color: #f56e6e;
+  font-size: 12px;
+}
+
 /*table th {*/
 /*  font-weight: 600;*/
 /*  background-color: #eeecfd !important;*/
 /*}*/
+
+
+.accepted-materials {
+  display: flex;
+  gap: 5px; /* Adjust the spacing between badges as needed */
+}
+
+
+
