--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,4 +1,3 @@
-
 <ng-container *ngIf="(homeState$ | async) as state">
   <!-- Main Content -->
   <section class="main-section">
@@ -7,38 +6,21 @@
     <div class="container mt-3">
       <div class="row">
         <div class="col">
-          <h4 class="fw-bold text-start">Recycling Centers</h4>
+          <h4 class="fw-bold text-start">Recycling Centers ({{ state?.appData?.data?.page?.totalElements }})</h4>
         </div>
         <div class="col text-end">
-          <!--        <h4 class="fw-bold"><i class="bi bi-file-earmark-excel" style="cursor: pointer; color: green; font-size: 30px;"></i></h4>-->
+          <button class="btn btn-success me-2"  (click)="navigateToCreateCenter()">
+            <i class="fa-regular fa-square-plus"></i> New Center
+          </button>
+          <!-- Add a 'View More' button -->
+          <button class="btn btn-info me-2" (click)="navigateToCentersView()">
+            <i class="fa-solid fa-list-ul"></i> View More
+          </button>
         </div>
       </div>
 
-      <!-- No Centers message Content -->
+      <!-- Table Section -->
       <div class="table-responsive mt-3">
-
-<!--        <ng-container *ngIf="state?.appData?.data?.page?.content?.length <= 0">-->
-<!--          <table class="table table-hover">-->
-<!--            &lt;!&ndash; Table Header &ndash;&gt;-->
-<!--            <thead class="bg-gradient text-white">-->
-<!--            <tr>-->
-<!--              <th scope="col">Photo</th>-->
-<!--              <th scope="col">Name</th>-->
-<!--              <th scope="col">Contact</th>-->
-<!--              <th scope="col">Location</th>-->
-<!--              <th scope="col">Materials</th>-->
-<!--              <th scope="col">Working Intervals</th>-->
-<!--              <th scope="col">Status</th>-->
-<!--              <th scope="col">Action</th>-->
-<!--            </tr>-->
-<!--            </thead>-->
-<!--          </table>-->
-<!--          <div class="alert alert-info mt-3" role="alert">-->
-<!--            No recycling centers available at the moment. Check back later.-->
-<!--          </div>-->
-<!--        </ng-container>-->
-
-
         <table class="table table-hover">
           <!-- Table Header -->
           <thead class="bg-gradient text-white">
@@ -54,13 +36,19 @@
           </tr>
           </thead>
           <!-- Table Body -->
-          <tbody *ngFor="let center of state?.appData?.data?.page?.content"  class="table-body">
+          <tbody *ngFor="let center of state?.appData?.data?.page?.content" class="table-body">
           <tr class="cell-1">
             <td><img src="https://robohash.org/recyclingcenter" width="42" height="42" class="rounded-circle"></td>
-            <td> {{ center.name }} </td>
-            <td> {{ center.county }} </td>
-            <td> {{ center.city }} </td>
-            <td> PAPER </td>
+            <td>{{ center.name }}</td>
+            <td>{{ center.county }}</td>
+            <td>{{ center.city }}</td>
+            <td>
+              <div class="accepted-materials">
+                <ng-container *ngFor="let material of center | acceptedMaterials">
+                  <span class="badge mb-0" [ngClass]="material.badgeClass">{{ material.name }}</span>
+                </ng-container>
+              </div>
+            </td>
             <td>
               <ng-container *ngIf="center.alwaysOpen; else hourInterval">
                 Open Always
@@ -73,14 +61,12 @@
               <span class="badge bg-success">OPEN</span>
             </td>
             <td>
-              <button type="button" [routerLink]="['/centers']" class="btn btn-info">View</button>
+              <button type="button" [routerLink]="['/centers']" class="btn" style="background-color: #63ad6f; color: #fff;">  <i class="fa-solid fa-recycle"></i>  </button>
             </td>
           </tr>
           </tbody>
         </table>
       </div>
-
-<!--      <p>Total Elements: {{ state?.appData?.data?.page?.totalElements }}</p>-->
 
       <!-- Pagination -->
       <nav *ngIf="state?.appData?.data?.page.totalPages > 0">
@@ -94,18 +80,10 @@
           (pageChange)="goToPage($event)"
           class="pagination justify-content-end"
         >
-
           <ng-template ngbPaginationPrevious><< Prev</ng-template>
           <ng-template ngbPaginationNext>Next >></ng-template>
         </ngb-pagination>
       </nav>
-
-<!--      <ng-template #noCenters>-->
-<!--        <div class="alert alert-info mt-3" role="alert">-->
-<!--          No recycling centers available at the moment. Check back later.-->
-<!--        </div>-->
-<!--      </ng-template>-->
-
     </div>
   </section>
 </ng-container>
