--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -2,54 +2,50 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #A01540">
   <div class="container">
     <a class="navbar-brand text-color" [routerLink]="['/']">
-      <i class="material-icons">recycling</i>
-      <span class="brand-name">.msgRecyclingRewards</span>
+      <span class="brand-name"><i class="fa-solid fa-leaf"></i> .msgRecyclingRewards</span>
     </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Centers
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" [routerLink]="['/centers/all']"><i  style="padding-right: 8px;" class="bi bi-person-plus-fill"></i> All Centers</a></li>
-            <li><a class="dropdown-item" [routerLink]="['/centers/all']"><i style="padding-right: 8px;"  class="bi bi-people-fill"></i> Favourite Centers</a></li>
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Centers</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" [routerLink]="['/centers/all']"><i class="bi bi-person-plus-fill"></i> All Centers</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/centers/all']"><i class="bi bi-people-fill"></i> Favourite Centers</a></li>
           </ul>
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Leaderboard
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Leaderboard</a>
+          <ul class="dropdown-menu">
             <li><a class="dropdown-item" [routerLink]="['/leaderboards/monthly']"><i class="bi bi-person-plus-fill"></i> Monthly Leaderboard</a></li>
             <li><a class="dropdown-item" [routerLink]="['/leaderboard']"><i class="bi bi-people-fill"></i> Global Leaderboard</a></li>
           </ul>
         </li>
+
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Challenges
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Challenges</a>
+          <ul class="dropdown-menu">
             <li><a class="dropdown-item" [routerLink]="['/challenges/all']"><i class="bi bi-person-plus-fill"></i> All Challenges</a></li>
             <li><a class="dropdown-item" [routerLink]="['/challenges/']"><i class="bi bi-people-fill"></i> My Challenges</a></li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            EcoLearn
-          </a>
+
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/ecolearn']">EcoLearn</a>
         </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img [src]="user?.imageUrl" [alt]="user?.firstName" class="user-avatar-md rounded-circle" style="width: 28px; height: 28px;">
           </a>
-          <ul class="dropdown-menu dropdown-menu-end">
+          <ul class="dropdown-menu">
             <li><a class="dropdown-item" [routerLink]="['/profile']"><i class="bi bi-person-circle"></i>{{ user?.firstName }} {{ user?.lastName }}</a></li>
-            <li style="cursor: pointer;"><a class="dropdown-item" (click)="logOut()"><i style="padding-right: 8px;" class="bi bi-box-arrow-in-right"></i>Logout</a></li>
+            <li style="cursor: pointer;"><a class="dropdown-item" (click)="logOut()"><i class="bi bi-box-arrow-in-right"></i> Logout</a></li>
           </ul>
         </li>
       </ul>
