--- a/src/styles.css
+++ b/src/styles.css
@@ -44,11 +44,11 @@ input[type="text"]:disabled {
   background-color: #ecf2f5;
 }
 
-/*.select-cl {*/
-/*  background-color: #ecf2f5;*/
-/*  border: 0;*/
-/*  outline: 0;*/
-/*}*/
+.select-cl {
+  background-color: #ecf2f5;
+  border: 0;
+  outline: 0;
+}
 
 .cell-1 {
   border-collapse: separate;
@@ -61,4 +61,9 @@ input[type="text"]:disabled {
 
 thead {
   background: #dddcdc;
+}
+
+::selection {
+  background-color: #A01540; /* Adjust the background color as needed */
+  color: #fff; /* Adjust the text color as needed */
 }
